--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test From su Lista</title>
+    <title>Test Form su Lista</title>
     <link rel="stylesheet" href="master.css">
 </head>
 <body>
@@ -95,7 +95,7 @@
             <input type=hidden name="MID" value="Your member ID here">
         <div class="container">
           <h2>Iscriviti alla newsletter</h2>
-          <p>Newsletter blog mondoconv</p>
+          <p>Newsletter blog</p>
         </div>
       
         <div class="container" style="background-color:white">
