--- a/index.html
+++ b/index.html
@@ -110,5 +110,11 @@
           <input type="submit" value="Subscribe">
         </div>
       </form>
+        <ul>
+          <li>Vai alla <a href="error.html">di errore</a></li>
+          <li>Vai alla <a href="thankyou.html">thank you page</a></li>
+          <li>Vai alla <a href="unsub.html">pagina di disiscrizione</a></li>
+          <li>Vai alla <a href="memberid.html">pagina di member ID</a></li>
+        </ul>
 </body>
 </html>
