--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         </script>
 
         <form action="http://cl.exct.net/subscribe.aspx?lid=1543" name="subscribeForm" method="post" onSubmit="return checkForm();">
-            <input type=hidden name="thx" value="Your thank you page here"> 
-            <input type=hidden name="err" value="Your error page here"> 
-            <input type=hidden name="usub" value="Your success unsub page here"> 
-            <input type=hidden name="MID" value="Your member ID here">
+            <input type=hidden name="thx" value="https://roccoan-sigro.github.io/test/thankyou.html"> 
+            <input type=hidden name="err" value="https://roccoan-sigro.github.io/test/error.html"> 
+            <input type=hidden name="usub" value="https://roccoan-sigro.github.io/test/unsub.html"> 
+            <input type=hidden name="MID" value="https://roccoan-sigro.github.io/test/memberid.html">
         <div class="container">
           <h2>Iscriviti alla newsletter</h2>
           <p>Newsletter blog</p>
@@ -111,8 +111,8 @@
         </div>
       </form>
         <ul>
-          <li>Vai alla <a href="error.html">di errore</a></li>
-          <li>Vai alla <a href="thankyou.html">thank you page</a></li>
+          <li>Vai alla <a href="error.html">pagina di errore</a></li>
+          <li>Vai alla <a href="thankyou.html">pagina di thank you page</a></li>
           <li>Vai alla <a href="unsub.html">pagina di disiscrizione</a></li>
           <li>Vai alla <a href="memberid.html">pagina di member ID</a></li>
         </ul>
