--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <input type=hidden name="thx" value="https://roccoan-sigro.github.io/test/thankyou.html"> 
             <input type=hidden name="err" value="https://roccoan-sigro.github.io/test/error.html"> 
             <input type=hidden name="usub" value="https://roccoan-sigro.github.io/test/unsub.html"> 
-            <input type=hidden name="MID" value="https://roccoan-sigro.github.io/test/memberid.html">
+            <input type=hidden name="MID" value="510001710">
         <div class="container">
           <h2>Iscriviti alla newsletter</h2>
           <p>Newsletter blog</p>
@@ -110,11 +110,5 @@
           <input type="submit" value="Subscribe">
         </div>
       </form>
-        <ul>
-          <li>Vai alla <a href="error.html">pagina di errore</a></li>
-          <li>Vai alla <a href="thankyou.html">pagina di thank you page</a></li>
-          <li>Vai alla <a href="unsub.html">pagina di disiscrizione</a></li>
-          <li>Vai alla <a href="memberid.html">pagina di member ID</a></li>
-        </ul>
 </body>
 </html>
