--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <input type="text" placeholder="Nome" name="name" required>
           <input type="text" placeholder="Indirizzo email" name="mail" required>
           <label>
-            <input type="checkbox" name="subscribe"> Privacy
+            <input type="checkbox" value="sub_add_update" name="subscribe"> Privacy
           </label>
         </div>
       
