--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 return false;
             }
         }
-        </script>
+        </SCRIPT>
 
         <form action="http://cl.exct.net/subscribe.aspx?lid=1543" name="subscribeForm" method="post" onSubmit="return checkForm();">
             <input type=hidden name="thx" value="https://roccoan-sigro.github.io/test/thankyou.html"> 
@@ -99,15 +99,15 @@
         </div>
       
         <div class="container" style="background-color:white">
-          <input type="text" placeholder="Nome" name="name" required>
-          <input type="text" placeholder="Indirizzo email" name="mail" required>
+          <input type="text" placeholder="Nome" name="Full Name" required>
+          <input type="text" placeholder="Indirizzo email" name="Email Address" required>
           <label>
-            <input type="checkbox" value="sub_add_update" name="subscribe"> Privacy
+            <input type="checkbox" value="sub_add_update" name="SubAction"> Privacy
           </label>
         </div>
       
         <div class="container">
-          <input type="submit" value="Subscribe">
+          <input type="submit" value="Submit">
         </div>
       </form>
 </body>
