--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       
         <div class="container" style="background-color:white">
           <input type="text" placeholder="Nome" name="Full Name" required>
-          <input type="text" placeholder="Indirizzo email" name="Email Address" required>
+          <input type="email" placeholder="Indirizzo email" name="Email Address" required>
+          <input type=hidden name="MID" value="510001710">
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
