--- a/index.html
+++ b/index.html
@@ -104,10 +104,8 @@
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
-            <input type="radio" id="Yes" name="SubAction" value="sub_add_update" checked="yes">
-            <label for="Yes">Accetto le condizioni</label><br>
-            <input type="radio" id="No" name="SubAction" value="none">
-            <label for="No">Non accetto le condizioni</label><br>
+            <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>
+            <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni 2<br>
         </div>
 
         <div class="container">
