--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
           <input type="email" placeholder="Indirizzo email" name="Email Address" required>
           <input type=hidden name="MID" value="510001710">
         </div>
+            
+                <div style="display: none;">
+            <input type="radio" name="Email Type" value="HTML" checked>
+        </div>
 
         <div> <h3>Consenso privacy</h3> <br>
             <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>
