--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       
         <div class="container" style="background-color:white">
-          <input type="email" placeholder="Indirizzo email" name="Email Address" required>
+          <input type="text" placeholder="Indirizzo email" name="Email Address" required>
           <input type=hidden name="MID" value="510001710">
         </div>
             
