--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
       
         <div class="container" style="background-color:white">
           <input type="text" placeholder="Indirizzo email" name="Email Address" required>
-          <input type=hidden name="MID" value="510001710">
         </div>
             
-                <div style="display: none;">
-            <input type="radio" name="Email Type" value="HTML" checked>
+        <div style="display: none;">
+            <input type="radio" name="Email Type" value="HTML" checked required>
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
