--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
-            <input type="checkbox" name="SubAction" required>Accetto le condizioni<br>
-            <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni 2<br>
+            <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>
         </div>
 
         <div class="container">
