--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
-            <input type="radio" name="SubAction" value="sub_add_update" checked>Accetto le condizioni<br>
+            <input type="radio" name="SubAction" value="sub_add_update" checked required>Accetto le condizioni<br>
+            <input type="radio" name="SubAction" value="">Non ccetto le condizioni<br>
             <!--<input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>-->
         </div>
 
