--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         }
         </SCRIPT>
 
-        <form action="http://cl.exct.net/subscribe.aspx?lid=1543" name="subscribeForm" method="post" onSubmit="return checkForm();">
+        <form action="http://cl.s50.exct.net/subscribe.aspx?lid=1543" name="subscribeForm" method="post" onSubmit="return checkForm();">
             <input type=hidden name="thx" value="https://roccoan-sigro.github.io/test/thankyou.html"> 
             <input type=hidden name="err" value="https://roccoan-sigro.github.io/test/error.html"> 
             <input type=hidden name="MID" value="510001710">
