--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         </div>
 
         <div> <h3>Consenso privacy</h3> <br>
-            <input type="radio" name="SubAction" value="sub_add_update" checked required>Accetto le condizioni<br>
-            <input type="radio" name="SubAction" value="">Non ccetto le condizioni<br>
-            <!--<input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>-->
+            <!--<input type="radio" name="SubAction" value="sub_add_update" checked required>Accetto le condizioni<br>
+            <input type="radio" name="SubAction" value="">Non ccetto le condizioni<br>-->
+            <input type="checkbox" name="SubAction" value="sub_add_update" required>Accetto le condizioni<br>
         </div>
 
         <div class="container">
